# hdvec

./: .gitignore  .pre-commit-ci.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  benchmarks.py  pyproject.toml
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: scene_crosstalk.py
docs/: ACCELERATION_PLAN.md  HDVEC_SCALING.md  HDVEC_SPEC.md  HDVEC_TASKS.md  POST_V1_ROADMAP.md  conf.py  decoding_resonators.md  fpe_kernels.md  index.rst  lcc_demo.md  quickstart_grid.md  residue_torus_plan.md
examples/: rhc_arithmetic.py  vfa_regression.py
notebooks/: scene_crosstalk.ipynb
src/hdvec/: __init__.py  base.py  config.py  core.py  decoding.py  errors.py  fpe.py  ghrr.py  permute.py  residue.py  typing.py  utils.py  vfa.py
src/hdvec/core/: __init__.py  algebra.py  backends.py  codebook.py  metrics.py
src/hdvec/encoding/: __init__.py  boolean.py  fpe.py  fpe_learned.py  kernels.py  positional.py  residue.py  scene.py  vfa.py
src/hdvec/ghrr/: __init__.py  ops.py
tests/: conftest.py  test_backends.py  test_base.py  test_boolean.py  test_config.py  test_core.py  test_core_batch.py  test_core_extras.py  test_decoding.py  test_fpe.py  test_fpe_extras.py  test_fpe_learned.py  test_fpe_property.py  test_ghrr.py  test_lcc_blocks_skip.py  test_permutation_group.py  test_permute.py  test_positional.py  test_residue.py  test_residue_extras.py  test_residue_init.py  test_residue_torus_invariance.py  test_utils.py  test_vfa.py  test_vfa_grid.py
