[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hdvec"
version = "0.1.0"
description = "Hyperdimensional vector primitives and encoders (FPE, VFA, GHRR, RHC) with NumPy/Numba stubs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "LGPL-3.0-or-later" }
authors = [
  { name = "Brodie Schroeder", email = "brodie@twistient.com" },
]
maintainers = [
  { name = "Brodie Schroeder", email = "brodie@twistient.com" },
]
keywords = ["hyperdimensional", "VSA", "FPE", "VFA", "GHRR", "RHC", "NumPy", "Numba"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.11",
  "typing_extensions>=4.10; python_version < '3.11'",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
numba = ["numba>=0.59"]
dev = [
  "pytest>=7.4",
  "ruff>=0.6.5",
  "black>=24.8.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.1",
  "coverage[toml]>=7.6.0",
  "hypothesis>=6.99.0",
  "build>=1.2.1",
]
docs = [
  "sphinx>=7.3",
  "furo>=2024.8.6",
  "myst-parser>=3.0.1",
  "sphinx-autodoc-typehints>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/Twistient/hdvec"
Repository = "https://github.com/Twistient/hdvec"
Issues = "https://github.com/Twistient/hdvec/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C90"]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["hdvec"]

[tool.mypy]
python_version = "3.10"
strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
show_error_codes = true
mypy_path = ["src"]

[tool.coverage.run]
branch = true
source = ["hdvec"]

[tool.coverage.report]
show_missing = true
skip_covered = true
